fixed the alignment of text in faq

--- a/website/static/nonprofits.css
+++ b/website/static/nonprofits.css
@@ -209,13 +209,15 @@ p {
 
 #faq-sec {
   background-color: white;
-  padding: 50px 0;
+  padding-top: 5%;
+  padding-left: 4%;
+  padding-right: 4%;
 }
 
 #faq-sec .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 0;
 }
 
 #faq-sec h2 {
@@ -231,6 +233,10 @@ p {
 
 .faq-item {
   margin-bottom: 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .faq-item h3 {
@@ -250,6 +256,8 @@ p {
   line-height: 1.6;
   font-family: "Lato", sans-serif;
   color: #afafaf;
+
+  margin: 0;
 }
 
 @media (max-width: 768px) {
